# raidx

./: .gitignore  Makefile  README.md
config/raid1/: raidx.config.json
config/raid2/: raidx.config.json
docs/: peers.drawio
raidx/: Cargo.toml  diesel.toml
raidx/migrations/2024-09-05-202418_create_files/: down.sql  up.sql
raidx/migrations/2024-09-15-152952_queues/: down.sql  up.sql
raidx/src/: lib.rs  main.rs  schema.rs
raidx/src/models/: files.rs  nodes.rs
raidx/src/models/queues/: messages.rs  messages_incoming.rs  messages_outgoing.rs
raidx/src/models/utils/: error.rs
raidx/src/peers/: nodes.rs  server.rs  synchronizer.rs  watcher.rs
raidx/src/protocol/: message.rs
raidx/src/utils/: configs.rs
